5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1575_1329.log
== SUBMITION (2019-03-12 11:57:07) 
-- CODE:
print(72)
-- EXECUTION TIME:
0.232618
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:57:16) 
-- CODE:
print(720)
-- EXECUTION TIME:
0.206817
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
720
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:57:38) 
-- CODE:
print(45)
-- EXECUTION TIME:
0.161346
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
45
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:37:16) 
-- CODE:
print()
-- EXECUTION TIME:
0.201566
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:39:23) 
-- CODE:
true(180/4)
print("true")
-- EXECUTION TIME:
0.212248
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/1329/main.py", line 1, in <module>
    true(180/4)
NameError: name 'true' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:39:26) 
-- CODE:
true(180/4)
print("true")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    true(180/4)
NameError: name 'true' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:39:47) 
-- CODE:
print("45")
-- EXECUTION TIME:
0.133201
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
45
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
